# swarm-rescue

./: .gitignore  CHANGELOG.md  INSTALL.md  LICENSE  MANIFEST.in  README.md  Todo.md  create_zip_submission.sh  doxyfile  pyproject.toml  req_u18.txt  req_u24.txt  requirements.txt  requirements_2.txt  setup.py  submission_guidelines.md  tox.ini
config/: default_eval_plan.yml  final_2022_23_eval_plan.yml  final_2023_24_eval_plan.yml  final_2024_25_eval_plan.yml  intermediate_eval_plan.yml  my_eval_plan.yml  test_special_zones_eval_plan.yml
examples/: example_com_disabler.py  example_disablers.py  example_disappearing_walls.py  example_display_lidar.py  example_gps_disablers.py  example_keyboard.py  example_mapping.py  example_moving_wounded.py  example_pid_rotation.py  example_pid_translation.py  example_return_area.py  example_semantic_sensor.py  example_static_semantic_sensor.py  random_drones.py  random_drones_intermediate_1.py
src/swarm-rescue/: launcher.py
src/swarm-rescue/examples/: display_lidar.py  display_lidar_2.py  display_sensor.py  example_touch_sensor.py  example_walls.py
src/swarm-rescue/maps/: map_abstract.py  map_compet_01.py  map_eating_candy.py  map_fish.py  map_random.py  map_rescue_wounded_persons.py  walls_01.py
src/swarm-rescue/solutions/: my_drone_check_comm.py  my_drone_eating_candy.py  my_drone_fish.py  my_drone_random.py  my_drone_rescue_wounded_persons.py
src/swarm-rescue/spg_overlay/: drone.py  drone_sensors.py  normal_wall.py  rescue_center.py  utils.py  wounded_person.py
src/swarm-rescue/tools/: wall_from_segment.py
src/swarm-rescue/tuto_spg_jupyter/: tuto_01.py  tuto_02_01_areas.py  tuto_02_02_agentdoor.py  tuto_02_03_rooms.py  tuto_02_04_wallTypes.py  tuto_02_05_textures.py  tuto_03_01_sceneElements.py  tuto_03_02_interactiveSceneElements.py  tuto_03_03_doorsAndSwitches.py  tuto_03_04_teleports.py  tuto_03_05_otherTestPlaygrounds.py  tuto_04_01_textures.py  tuto_05_01_fields.py  tuto_06_01_agents.py  tuto_06_02_agents.py  tuto_06_03_agents_funnyAddition.py
src/swarm_rescue/: cheatsheet.txt  launcher.py
src/swarm_rescue/doc/: chemin.md  strategie.md
src/swarm_rescue/examples/: display_lidar.py  display_lidar_2.py  display_sensor.py  example_com_disabler.py  example_disablers.py  example_gps_disablers.py  example_keyboard.py  example_walls.py  (+11 more)
tests/: test_drone_distance_sensors.py  test_explored_map.py  test_remove_comprehensive.py  test_remove_protection.py  test_sensor_ouput.py  test_timer.py  test_trajectory.py  test_utils.py  test_utils_noise.py  test_wall.py
(+243 files in other folders)
